@@ -1,3 +1,12 @@
+[b][color=orange]v3.19[/color], 30.01.2018[/b][list]
+[*]Add an EquipSet Bar. Thx Azilroka for this <3
+[*]Fix Party/Raid position for high resolutions.
+[*]Update BigWigs Skin. No Half-Bar anymore.
+[*]Replace the Quest button with a Talent button in the MicroBar.
+[*]Don't hide the AFK options if BenikUI is loaded.
+[*]Add new font settings for S&L (its not live yet), will error out.
+[*]Fixed the option for the MerchantItemLevel.[/list]
+
 [b][color=orange]v3.18[/color], 26.01.2018[/b][list]
 [*]Changed the middle Datatext framestrata.
 [*]Add an option to disable the Infotexts style.
